[project]
name = "asfw-sim"
version = "0.1.0"
description = "Four-cursor TX geometry simulator for ASFireWire: W (CoreAudio write), E (exposure), C (completion), R (RX replay reader)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[project.scripts]
asfw-sim = "asfw_sim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asfw_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
